--- a/RoomMate/Base.lproj/Main.storyboard
+++ b/RoomMate/Base.lproj/Main.storyboard
@@ -1,24 +1,182 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bpj-bf-bCA">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RoomMate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="icons8-home" selectedImage="icons8-home-filled" id="oih-hg-Nbs">
+                        <inset key="largeContentSizeImageInsets" minX="0.0" minY="-1" maxX="0.0" maxY="0.0"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1433" y="-667"/>
+        </scene>
+        <!--Clean-->
+        <scene sceneID="nJG-ym-DfB">
+            <objects>
+                <viewController id="MDm-nQ-ifp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3LE-tG-v6e">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your Cleaning Schedule" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPg-5z-4u9">
+                                <rect key="frame" x="69" y="62" width="182" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ecA-A2-Vcl"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Clean" image="icons8-broom-25" selectedImage="icons8-broom-filled-25" id="R3o-NV-Ixx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qhO-RH-M1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1433" y="23"/>
+        </scene>
+        <!--Drink-->
+        <scene sceneID="KLo-g1-8is">
+            <objects>
+                <viewController id="yS6-Ci-un1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ki9-ad-33r">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DRINKS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPy-VW-VIY">
+                                <rect key="frame" x="130" y="67" width="60" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Beers in store" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SWV-1K-JQX">
+                                <rect key="frame" x="16" y="128" width="105" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="GBN-YT-PgU"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Drink" image="icons8-beer-25" selectedImage="icons8-beer-filled-25" id="Xu5-K1-K6h"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uu3-sE-lTs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1433" y="730"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="3ML-W3-Oum">
+            <objects>
+                <viewController id="bpj-bf-bCA" customClass="ViewController" customModule="RoomMate" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iil-SU-HzS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="k0L-YB-kJM">
+                                <rect key="frame" x="136.5" y="239" width="47" height="90.5"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ueg-4v-mND">
+                                        <rect key="frame" x="0.0" y="0.0" width="47" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fEI-ih-pIh">
+                                        <rect key="frame" x="0.0" y="60.5" width="47" height="30"/>
+                                        <state key="normal" title="Login"/>
+                                        <connections>
+                                            <action selector="logInButtonTapped:" destination="bpj-bf-bCA" eventType="touchUpInside" id="8Kk-71-oCt"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="lsl-Zc-zQa">
+                                <rect key="frame" x="16" y="20" width="288" height="88.5"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Room Mate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IoA-KZ-seQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="studenten!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2vf-jg-Dva">
+                                        <rect key="frame" x="0.0" y="68" width="288" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lsl-Zc-zQa" firstAttribute="trailing" secondItem="iil-SU-HzS" secondAttribute="trailingMargin" id="AB6-Jn-Q4Y"/>
+                            <constraint firstItem="lsl-Zc-zQa" firstAttribute="leading" secondItem="iil-SU-HzS" secondAttribute="leadingMargin" id="BfX-5A-Rdd"/>
+                            <constraint firstItem="k0L-YB-kJM" firstAttribute="centerX" secondItem="iil-SU-HzS" secondAttribute="centerX" id="GDi-Hk-7jz"/>
+                            <constraint firstItem="k0L-YB-kJM" firstAttribute="centerY" secondItem="iil-SU-HzS" secondAttribute="centerY" id="iPN-Sf-keJ"/>
+                            <constraint firstItem="lsl-Zc-zQa" firstAttribute="top" secondItem="iil-SU-HzS" secondAttribute="topMargin" id="ktQ-Eo-Ifi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zxK-Ch-8qc"/>
+                    </view>
+                    <connections>
+                        <outlet property="loginButton" destination="fEI-ih-pIh" id="D3w-zU-vKJ"/>
+                        <outlet property="loginLabel" destination="ueg-4v-mND" id="Jqt-pX-O6z"/>
+                        <outlet property="subtitleLabel" destination="2vf-jg-Dva" id="EEd-4x-K08"/>
+                        <outlet property="titleLabel" destination="IoA-KZ-seQ" id="BHW-G9-hfa"/>
+                        <segue destination="Q9Y-4G-lvz" kind="show" identifier="goHome" id="KWh-XF-I9y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SEd-Wx-Nob" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-859" y="132"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Ls6-LS-Tnz">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Q9Y-4G-lvz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="h0l-UX-REN">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="wi4-Pc-yE0"/>
+                        <segue destination="MDm-nQ-ifp" kind="relationship" relationship="viewControllers" id="2dx-xw-IrB"/>
+                        <segue destination="yS6-Ci-un1" kind="relationship" relationship="viewControllers" id="Ato-QE-ZYP"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5qu-LT-hUn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icons8-beer-25" width="18.75" height="18.75"/>
+        <image name="icons8-beer-filled-25" width="18.75" height="18.75"/>
+        <image name="icons8-broom-25" width="18.75" height="18.75"/>
+        <image name="icons8-broom-filled-25" width="18.75" height="18.75"/>
+        <image name="icons8-home" width="25" height="25"/>
+        <image name="icons8-home-filled" width="25" height="25"/>
+    </resources>
 </document>
