--- a/RoomMate/Base.lproj/Main.storyboard
+++ b/RoomMate/Base.lproj/Main.storyboard
@@ -380,7 +380,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jXZ-44-lP9">
                                 <rect key="frame" x="110" y="259" width="100" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="7lR-qn-7rG"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="7lR-qn-7rG"/>
                                     <constraint firstAttribute="height" constant="50" id="EvX-E7-4nH"/>
                                 </constraints>
                                 <state key="normal" title="Drink One"/>
@@ -394,7 +394,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDC-Ac-Blt">
                                         <rect key="frame" x="0.0" y="68.5" width="120" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="fcy-0J-Bz5"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="fcy-0J-Bz5"/>
                                         </constraints>
                                         <state key="normal" title="Change Drinks"/>
                                         <connections>
@@ -437,7 +437,7 @@
                     <navigationItem key="navigationItem" title="Drinks" id="Bc4-MM-0BK">
                         <barButtonItem key="rightBarButtonItem" systemItem="organize" id="zdL-T3-8ou">
                             <connections>
-                                <segue destination="kY6-mW-feP" kind="show" id="K2m-rI-uBC"/>
+                                <segue destination="kY6-mW-feP" kind="show" id="I7F-VW-lUL"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -454,7 +454,7 @@
             </objects>
             <point key="canvasLocation" x="2820" y="1337"/>
         </scene>
-        <!--Overview-->
+        <!--Lubrication-->
         <scene sceneID="SwK-xw-em4">
             <objects>
                 <viewController id="kY6-mW-feP" customClass="OverviewDrinksViewController" customModule="RoomMate" customModuleProvider="target" sceneMemberID="viewController">
@@ -463,7 +463,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fCD-A9-Cs7">
-                                <rect key="frame" x="0.0" y="79" width="320" height="385"/>
+                                <rect key="frame" x="0.0" y="122" width="320" height="343"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScoreCell" textLabel="SeI-oW-b5z" detailTextLabel="8CS-JR-qr4" style="IBUITableViewCellStyleValue1" id="1AG-Wu-gth">
@@ -512,29 +512,44 @@
                                     <constraint firstAttribute="height" constant="24" id="wwu-01-W08"/>
                                 </constraints>
                             </stackView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VqN-IO-E4r">
+                                <rect key="frame" x="16" y="79" width="288" height="29"/>
+                                <segments>
+                                    <segment title="Drinks Behind"/>
+                                    <segment title="Total Drinks"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentTapped:" destination="kY6-mW-feP" eventType="valueChanged" id="cKE-ot-UMv"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="fCD-A9-Cs7" firstAttribute="top" secondItem="wYk-bZ-MXe" secondAttribute="topMargin" constant="15" id="3db-F4-tTb"/>
+                            <constraint firstItem="wPN-K5-amh" firstAttribute="top" secondItem="fCD-A9-Cs7" secondAttribute="bottom" constant="15" id="1Pq-3A-ETD"/>
+                            <constraint firstItem="VqN-IO-E4r" firstAttribute="top" secondItem="wYk-bZ-MXe" secondAttribute="topMargin" constant="15" id="3yn-HM-YXe"/>
+                            <constraint firstItem="VqN-IO-E4r" firstAttribute="leading" secondItem="wYk-bZ-MXe" secondAttribute="leadingMargin" id="4aa-mY-Hb6"/>
                             <constraint firstItem="fCD-A9-Cs7" firstAttribute="leading" secondItem="I0z-4r-Bd6" secondAttribute="leading" id="ICy-uN-F06"/>
                             <constraint firstAttribute="bottomMargin" secondItem="wPN-K5-amh" secondAttribute="bottom" constant="15" id="QPg-rt-ju6"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wPN-K5-amh" secondAttribute="trailing" id="QtV-4O-htO"/>
+                            <constraint firstItem="VqN-IO-E4r" firstAttribute="trailing" secondItem="wYk-bZ-MXe" secondAttribute="trailingMargin" id="SWk-Nv-MAW"/>
+                            <constraint firstItem="fCD-A9-Cs7" firstAttribute="top" secondItem="VqN-IO-E4r" secondAttribute="bottom" constant="15" id="Ws4-iA-IjW"/>
                             <constraint firstItem="fCD-A9-Cs7" firstAttribute="trailing" secondItem="I0z-4r-Bd6" secondAttribute="trailing" id="clN-ib-R0l"/>
-                            <constraint firstItem="wPN-K5-amh" firstAttribute="top" secondItem="fCD-A9-Cs7" secondAttribute="bottom" constant="16" id="gUf-78-DLv"/>
                             <constraint firstItem="wPN-K5-amh" firstAttribute="leading" secondItem="wYk-bZ-MXe" secondAttribute="leadingMargin" id="hR5-W1-hiX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="I0z-4r-Bd6"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Overview" largeTitleDisplayMode="never" id="kZ4-TW-6b6"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="xal-fY-AON"/>
+                    <navigationItem key="navigationItem" title="Lubrication" largeTitleDisplayMode="never" id="kZ4-TW-6b6"/>
                     <connections>
                         <outlet property="drinkTableView" destination="fCD-A9-Cs7" id="LUs-NW-2UE"/>
                         <outlet property="drinksLabel" destination="69z-L9-6oz" id="dLh-yB-z0D"/>
+                        <outlet property="segmentControl" destination="VqN-IO-E4r" id="VUF-vh-lmU"/>
                         <outlet property="totalDrinksLabel" destination="s8t-P0-h0Z" id="SJZ-JU-XTo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="leS-6c-JOs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3803" y="1337"/>
+            <point key="canvasLocation" x="4758.75" y="1334.1549295774648"/>
         </scene>
         <!--Add Drinks View Controller-->
         <scene sceneID="ICE-he-8H0">
@@ -646,6 +661,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="sbl-47-GPf">
+                                <rect key="frame" x="16" y="405.5" width="102" height="98.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Khf-au-YiM">
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="78"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="65"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drinks to Buy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xPR-IK-yZn">
+                                        <rect key="frame" x="0.0" y="78" width="102" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -660,8 +692,10 @@
                             <constraint firstAttribute="trailingMargin" secondItem="qgN-uq-P16" secondAttribute="trailing" id="eP8-5d-bkV"/>
                             <constraint firstItem="ZRw-Vv-ZZc" firstAttribute="top" secondItem="wvf-ni-654" secondAttribute="bottom" constant="50" id="eVy-IC-gsv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ZRw-Vv-ZZc" secondAttribute="trailing" id="ffp-33-KWa"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="sbl-47-GPf" secondAttribute="bottom" constant="15" id="lZx-sz-qfz"/>
                             <constraint firstItem="8xy-UD-Gqr" firstAttribute="leading" secondItem="nQK-BB-3Br" secondAttribute="leadingMargin" id="ovA-NV-dcd"/>
                             <constraint firstAttribute="bottomMargin" secondItem="2YK-07-aSW" secondAttribute="bottom" constant="15" id="qMh-8l-mId"/>
+                            <constraint firstItem="sbl-47-GPf" firstAttribute="leading" secondItem="nQK-BB-3Br" secondAttribute="leadingMargin" id="vJv-Wy-63H"/>
                             <constraint firstItem="wvf-ni-654" firstAttribute="top" secondItem="qgN-uq-P16" secondAttribute="bottom" constant="15" id="xMa-cu-Lke"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="l5E-54-tDN"/>
@@ -676,6 +710,7 @@
                     <connections>
                         <outlet property="boughtLabel" destination="qgN-uq-P16" id="VCj-w3-B1O"/>
                         <outlet property="changeLabel" destination="ZRw-Vv-ZZc" id="6Fs-x4-JSZ"/>
+                        <outlet property="drinksToBuyLabel" destination="Khf-au-YiM" id="z7j-wY-uSs"/>
                         <outlet property="minusOneButton" destination="PNL-rl-d9J" id="R3p-bs-Zqo"/>
                         <outlet property="plus24BoughtButton" destination="M77-OL-XbB" id="xM4-RV-L8H"/>
                         <outlet property="plus24Button" destination="4j6-HC-fgs" id="Wxu-IB-ln5"/>
@@ -688,7 +723,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="73b-S8-0Ld" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4830" y="1337"/>
+            <point key="canvasLocation" x="3803" y="1336"/>
         </scene>
         <!--App Container View Controller-->
         <scene sceneID="nAl-Ep-ZGU">
@@ -1009,6 +1044,6 @@
         <image name="icons8-user-filled-25" width="18.75" height="18.75"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="rc9-gj-uyJ"/>
+        <segue reference="XJM-VD-pff"/>
     </inferredMetricsTieBreakers>
 </document>
